Add basic html structure

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>QuizApp</h1>
+    <h1>BOOKMARKS</h1>
     <section>
       <h2>QUESTION</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
