--- a/src/profile.html
+++ b/src/profile.html
@@ -7,31 +7,31 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>CREATE</h1>
+    <h1>PROFILE</h1>
+    <section>
+      <img src="https://picsum.photos/200" alt="" />
+      <p>Harry Potter</p>
+    </section>
 
-    <form action="submit">
-      <label
-        >Question<textarea
-          name=""
-          cols="30"
-          rows="10"
-          placeholder="Add question"
-        ></textarea>
-      </label>
-      <label
-        >Answer<textarea
-          name=""
-          cols="30"
-          rows="10"
-          placeholder="Add answer"
-        ></textarea>
-      </label>
-      <label
-        >Tags
-        <input type="text" name="tags" />
-      </label>
-      <button>SUBMIT</button>
-    </form>
+    <section>
+      <h3>About myself</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, magnam.
+      </p>
+    </section>
+    <section>
+      <h3>
+        My skills
+        <ul>
+          <li>skill1</li>
+          <li>skill2</li>
+          <li>skill3</li>
+          <li>skill4</li>
+          <li>skill5</li>
+        </ul>
+      </h3>
+    </section>
+    <button>Logout</button>
     <footer>
       <nav>
         <ul>
