--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -10,50 +10,50 @@
     <h1>BOOKMARKS</h1>
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>How many Hogwarts houses are there?</p>
       <button>SHOW ANSWER</button>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>3</li>
+        <li>10</li>
+        <li>4</li>
+        <li>8</li>
       </ul>
     </section>
 
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>What is the name of Hagrid’s big dog?</p>
       <button>SHOW ANSWER</button>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>Fin</li>
+        <li>Fang</li>
+        <li>Furry</li>
+        <li>Fluffy</li>
       </ul>
     </section>
 
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>What did Dobby catch that set him free from Mr. Malfoy?</p>
       <button>SHOW ANSWER</button>
       <p>answer</p>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>A dirty sock</li>
+        <li>A hat</li>
+        <li>A wand</li>
+        <li>A water melon</li>
       </ul>
     </section>
 
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>What flavour are Bertie Bott’s beans?</p>
       <button>SHOW ANSWER</button>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>Strawberry</li>
+        <li>Vanilla</li>
+        <li>Chocolate</li>
+        <li>Everything</li>
       </ul>
     </section>
 
