--- a/src/index.html
+++ b/src/index.html
@@ -7,53 +7,53 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>QuizApp</h1>
+    <h1>HP Quiz App</h1>
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>Which Hogwarts house did Harry Potter attend?</p>
       <button>SHOW ANSWER</button>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>Hufflepuff</li>
+        <li>Slytherin</li>
+        <li>Ravenclaw</li>
+        <li>Griffinthore</li>
       </ul>
     </section>
 
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>In which street did the Dursley's live?</p>
       <button>SHOW ANSWER</button>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>Royal Mile</li>
+        <li>Pivet Drive</li>
+        <li>Wizzard Alley</li>
+        <li>La Rambla</li>
       </ul>
     </section>
 
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>What position does Harry play on the Quidditch team?</p>
       <button>SHOW ANSWER</button>
       <p>answer</p>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>Seeker</li>
+        <li>Finder</li>
+        <li>Keeper</li>
+        <li>Beater</li>
       </ul>
     </section>
 
     <section>
       <h2>QUESTION</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>Which class has a different teacher every year?</p>
       <button>SHOW ANSWER</button>
       <ul>
-        <li>tag1</li>
-        <li>tag2</li>
-        <li>tag3</li>
-        <li>tag4</li>
+        <li>Astronomy</li>
+        <li>Charms</li>
+        <li>Defence Against the Dark Arts</li>
+        <li>Care of Magical Creatures</li>
       </ul>
     </section>
 
