--- a/src/profile.html
+++ b/src/profile.html
@@ -16,18 +16,19 @@
     <section>
       <h3>About myself</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, magnam.
+        The boy who lived. Born in West Country, grew up in Surry. Went to
+        Hogwarts. Defeated You-Know-Who.
       </p>
     </section>
     <section>
       <h3>
         My skills
         <ul>
-          <li>skill1</li>
-          <li>skill2</li>
-          <li>skill3</li>
-          <li>skill4</li>
-          <li>skill5</li>
+          <li>Quidditch</li>
+          <li>Flying</li>
+          <li>Patronus</li>
+          <li>Duelling</li>
+          <li>Parseltongue</li>
         </ul>
       </h3>
     </section>
