Improve basic html structure

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -7,55 +7,60 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>BOOKMARKS</h1>
-    <section>
-      <h2>QUESTION</h2>
-      <p>How many Hogwarts houses are there?</p>
-      <button>SHOW ANSWER</button>
-      <ul>
-        <li>3</li>
-        <li>10</li>
-        <li>4</li>
-        <li>8</li>
-      </ul>
-    </section>
+    <header>
+      <h1>BOOKMARKS</h1>
+    </header>
 
-    <section>
-      <h2>QUESTION</h2>
-      <p>What is the name of Hagrid’s big dog?</p>
-      <button>SHOW ANSWER</button>
-      <ul>
-        <li>Fin</li>
-        <li>Fang</li>
-        <li>Furry</li>
-        <li>Fluffy</li>
-      </ul>
-    </section>
+    <main>
+      <article>
+        <h2>QUESTION</h2>
+        <p>How many Hogwarts houses are there?</p>
+        <button>SHOW ANSWER</button>
+        <ul>
+          <li>3</li>
+          <li>10</li>
+          <li>4</li>
+          <li>8</li>
+        </ul>
+      </article>
 
-    <section>
-      <h2>QUESTION</h2>
-      <p>What did Dobby catch that set him free from Mr. Malfoy?</p>
-      <button>SHOW ANSWER</button>
-      <p>answer</p>
-      <ul>
-        <li>A dirty sock</li>
-        <li>A hat</li>
-        <li>A wand</li>
-        <li>A water melon</li>
-      </ul>
-    </section>
+      <article>
+        <h2>QUESTION</h2>
+        <p>What is the name of Hagrid’s big dog?</p>
+        <button>SHOW ANSWER</button>
+        <ul>
+          <li>Fin</li>
+          <li>Fang</li>
+          <li>Furry</li>
+          <li>Fluffy</li>
+        </ul>
+      </article>
 
-    <section>
-      <h2>QUESTION</h2>
-      <p>What flavour are Bertie Bott’s beans?</p>
-      <button>SHOW ANSWER</button>
-      <ul>
-        <li>Strawberry</li>
-        <li>Vanilla</li>
-        <li>Chocolate</li>
-        <li>Everything</li>
-      </ul>
-    </section>
+      <article>
+        <h2>QUESTION</h2>
+        <p>What did Dobby catch that set him free from Mr. Malfoy?</p>
+        <button>SHOW ANSWER</button>
+        <p>answer</p>
+        <ul>
+          <li>A dirty sock</li>
+          <li>A hat</li>
+          <li>A wand</li>
+          <li>A water melon</li>
+        </ul>
+      </article>
+
+      <article>
+        <h2>QUESTION</h2>
+        <p>What flavour are Bertie Bott’s beans?</p>
+        <button>SHOW ANSWER</button>
+        <ul>
+          <li>Strawberry</li>
+          <li>Vanilla</li>
+          <li>Chocolate</li>
+          <li>Everything</li>
+        </ul>
+      </article>
+    </main>
 
     <footer>
       <nav>
