--- a/src/create.html
+++ b/src/create.html
@@ -7,31 +7,36 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>CREATE</h1>
+    <header>
+      <h1>CREATE</h1>
+    </header>
 
-    <form action="submit">
-      <label
-        >Question<textarea
-          name=""
-          cols="30"
-          rows="10"
-          placeholder="Add question"
-        ></textarea>
-      </label>
-      <label
-        >Answer<textarea
-          name=""
-          cols="30"
-          rows="10"
-          placeholder="Add answer"
-        ></textarea>
-      </label>
-      <label
-        >Tags
-        <input type="text" name="tags" />
-      </label>
-      <button>SUBMIT</button>
-    </form>
+    <main>
+      <form action="submit">
+        <label
+          >Question<textarea
+            name=""
+            cols="30"
+            rows="10"
+            placeholder="Add question"
+          ></textarea>
+        </label>
+        <label
+          >Answer<textarea
+            name=""
+            cols="30"
+            rows="10"
+            placeholder="Add answer"
+          ></textarea>
+        </label>
+        <label
+          >Tags
+          <input type="text" name="tags" />
+        </label>
+        <button>SUBMIT</button>
+      </form>
+    </main>
+
     <footer>
       <nav>
         <ul>
