--- a/src/index.html
+++ b/src/index.html
@@ -7,55 +7,60 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>HP Quiz App</h1>
-    <section>
-      <h2>QUESTION</h2>
-      <p>Which Hogwarts house did Harry Potter attend?</p>
-      <button>SHOW ANSWER</button>
-      <ul>
-        <li>Hufflepuff</li>
-        <li>Slytherin</li>
-        <li>Ravenclaw</li>
-        <li>Griffinthore</li>
-      </ul>
-    </section>
+    <header>
+      <h1>HP Quiz App</h1>
+    </header>
 
-    <section>
-      <h2>QUESTION</h2>
-      <p>In which street did the Dursley's live?</p>
-      <button>SHOW ANSWER</button>
-      <ul>
-        <li>Royal Mile</li>
-        <li>Pivet Drive</li>
-        <li>Wizzard Alley</li>
-        <li>La Rambla</li>
-      </ul>
-    </section>
+    <main>
+      <article>
+        <h2>QUESTION</h2>
+        <p>Which Hogwarts house did Harry Potter attend?</p>
+        <button>SHOW ANSWER</button>
+        <ul>
+          <li>Hufflepuff</li>
+          <li>Slytherin</li>
+          <li>Ravenclaw</li>
+          <li>Griffinthore</li>
+        </ul>
+      </article>
 
-    <section>
-      <h2>QUESTION</h2>
-      <p>What position does Harry play on the Quidditch team?</p>
-      <button>SHOW ANSWER</button>
-      <p>answer</p>
-      <ul>
-        <li>Seeker</li>
-        <li>Finder</li>
-        <li>Keeper</li>
-        <li>Beater</li>
-      </ul>
-    </section>
+      <article>
+        <h2>QUESTION</h2>
+        <p>In which street did the Dursley's live?</p>
+        <button>SHOW ANSWER</button>
+        <ul>
+          <li>Royal Mile</li>
+          <li>Pivet Drive</li>
+          <li>Wizzard Alley</li>
+          <li>La Rambla</li>
+        </ul>
+      </article>
 
-    <section>
-      <h2>QUESTION</h2>
-      <p>Which class has a different teacher every year?</p>
-      <button>SHOW ANSWER</button>
-      <ul>
-        <li>Astronomy</li>
-        <li>Charms</li>
-        <li>Defence Against the Dark Arts</li>
-        <li>Care of Magical Creatures</li>
-      </ul>
-    </section>
+      <article>
+        <h2>QUESTION</h2>
+        <p>What position does Harry play on the Quidditch team?</p>
+        <button>SHOW ANSWER</button>
+        <p>answer</p>
+        <ul>
+          <li>Seeker</li>
+          <li>Finder</li>
+          <li>Keeper</li>
+          <li>Beater</li>
+        </ul>
+      </article>
+
+      <article>
+        <h2>QUESTION</h2>
+        <p>Which class has a different teacher every year?</p>
+        <button>SHOW ANSWER</button>
+        <ul>
+          <li>Astronomy</li>
+          <li>Charms</li>
+          <li>Defence Against the Dark Arts</li>
+          <li>Care of Magical Creatures</li>
+        </ul>
+      </article>
+    </main>
 
     <footer>
       <nav>
