--- a/src/profile.html
+++ b/src/profile.html
@@ -7,32 +7,37 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>PROFILE</h1>
-    <section>
-      <img src="https://picsum.photos/200" alt="" />
-      <p>Harry Potter</p>
-    </section>
+    <header>
+      <h1>PROFILE</h1>
+    </header>
 
-    <section>
-      <h3>About myself</h3>
-      <p>
-        The boy who lived. Born in West Country, grew up in Surry. Went to
-        Hogwarts. Defeated You-Know-Who.
-      </p>
-    </section>
-    <section>
-      <h3>
-        My skills
-        <ul>
-          <li>Quidditch</li>
-          <li>Flying</li>
-          <li>Patronus</li>
-          <li>Duelling</li>
-          <li>Parseltongue</li>
-        </ul>
-      </h3>
-    </section>
-    <button>Logout</button>
+    <main>
+      <section>
+        <img src="https://picsum.photos/200" alt="" />
+        <p>Harry Potter</p>
+      </section>
+
+      <section>
+        <h3>About myself</h3>
+        <p>
+          The boy who lived. Born in West Country, grew up in Surry. Went to
+          Hogwarts. Defeated You-Know-Who.
+        </p>
+      </section>
+      <section>
+        <h3>
+          My skills
+          <ul>
+            <li>Quidditch</li>
+            <li>Flying</li>
+            <li>Patronus</li>
+            <li>Duelling</li>
+            <li>Parseltongue</li>
+          </ul>
+        </h3>
+      </section>
+      <button>Logout</button>
+    </main>
     <footer>
       <nav>
         <ul>
