Added basic styling for components and improved reset

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">How many Hogwarts houses are there?</p>
         <button class="card__button">SHOW ANSWER</button>
@@ -25,7 +25,7 @@
         </ul>
       </article>
 
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">What is the name of Hagrid’s big dog?</p>
         <button class="card__button">SHOW ANSWER</button>
@@ -38,7 +38,7 @@
         </ul>
       </article>
 
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">
           What did Dobby catch that set him free from Mr. Malfoy?
@@ -53,7 +53,7 @@
         </ul>
       </article>
 
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">What flavour are Bertie Bott’s beans?</p>
         <button class="card__button">SHOW ANSWER</button>
