--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">
           Which Hogwarts house did Harry Potter attend?
@@ -30,7 +30,7 @@
         </ul>
       </article>
 
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">In which street did the Dursley's live?</p>
         <button class="card__button">SHOW ANSWER</button>
@@ -43,7 +43,7 @@
         </ul>
       </article>
 
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">
           What position does Harry play on the Quidditch team?
@@ -58,7 +58,7 @@
         </ul>
       </article>
 
-      <article class="card">
+      <article class="card mb-2">
         <h2 class="card__title">QUESTION</h2>
         <p class="card__question">
           Which class has a different teacher every year?
@@ -74,7 +74,7 @@
       </article>
     </main>
 
-    <footer>
+    <footer class="">
       <nav class="navigation">
         <ul class="navigation__container">
           <li class="navigation__item"><a href="index.html">Home</a></li>
