--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="title">HP Quiz App</h1>
+      <h1 class="title center">HP Quiz App</h1>
     </header>
 
     <main>
@@ -74,7 +74,7 @@
       </article>
     </main>
 
-    <footer class="">
+    <footer>
       <nav class="navigation">
         <ul class="navigation__container">
           <li class="navigation__item"><a href="index.html">Home</a></li>
