Fixed the footer navigation, introduced active states, and did some minor fixes.

--- a/index.html
+++ b/index.html
@@ -77,12 +77,18 @@
     <footer>
       <nav class="navigation">
         <ul class="navigation__container">
-          <li class="navigation__item"><a href="index.html">Home</a></li>
+          <li class="navigation__item navigation__item--active">
+            <a href="index.html">Home</a>
+          </li>
           <li class="navigation__item">
             <a href="bookmarks.html">Bookmarks</a>
           </li>
-          <li class="navigation__item"><a href="create.html">Create</a></li>
-          <li class="navigation__item"><a href="profile.html">Profile</a></li>
+          <li class="navigation__item">
+            <a href="create.html">Create</a>
+          </li>
+          <li class="navigation__item">
+            <a href="profile.html">Profile</a>
+          </li>
         </ul>
       </nav>
     </footer>
