Added active style to create and profile page

--- a/create.html
+++ b/create.html
@@ -46,7 +46,9 @@
           <li class="navigation__item">
             <a href="bookmarks.html">Bookmarks</a>
           </li>
-          <li class="navigation__item"><a href="create.html">Create</a></li>
+          <li class="navigation__item navigation__item--active">
+            <a href="create.html">Create</a>
+          </li>
           <li class="navigation__item"><a href="profile.html">Profile</a></li>
         </ul>
       </nav>
