--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,9 @@
             <a href="bookmarks.html">Bookmarks</a>
           </li>
           <li class="navigation__item"><a href="create.html">Create</a></li>
-          <li class="navigation__item"><a href="profile.html">Profile</a></li>
+          <li class="navigation__item navigation__item--active">
+            <a href="profile.html">Profile</a>
+          </li>
         </ul>
       </nav>
     </footer>
