Fixed wrong answer, thanks for the hint Lene

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p class="card__answer">They lived in Pivet Drive, Surrey.</p>
         <ul class="card__tags">
           <li>Royal Mile</li>
-          <li>Pivet Drive</li>
+          <li>Privet Drive</li>
           <li>Wizzard Alley</li>
           <li>La Rambla</li>
         </ul>
@@ -78,7 +78,7 @@
       <nav class="navigation">
         <ul class="navigation__container">
           <li class="navigation__item navigation__item--active">
-            <a href="index.html">Home</a>
+            <a class="navigation__anchor" href="index.html">Home</a>
           </li>
           <li class="navigation__item">
             <a href="bookmarks.html">Bookmarks</a>
