--- a/bookmarks.html
+++ b/bookmarks.html
@@ -17,7 +17,7 @@
         <p class="card__question">How many Hogwarts houses are there?</p>
         <button class="card__button">SHOW ANSWER</button>
         <p class="card__answer">There are four houses.</p>
-        <ul class="card__tags">
+        <ul class="tags">
           <li>3</li>
           <li>10</li>
           <li>4</li>
